--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# Please add user editor configs to system gitignore:
+# git config --global core.excludesfile
+# git config --global core.excludesfile ~/.gitignore
+# see also: https://gist.github.com/subfuzion/db7f57fff2fb6998a16c
+.clj-kondo
+.clj-kondo/.cache
+.cpcache
+.lsp
+.nrepl-port
+.shadow-cljs
+node_modules
+/resources/public/js
+/resources/electric-manifest.edn
+/target
+.DS_Store
+
 # Created by https://www.toptal.com/developers/gitignore/api/clojure,intellij+all,leiningen
 # Edit at https://www.toptal.com/developers/gitignore?templates=clojure,intellij+all,leiningen
 
